--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -10,7 +10,7 @@ jobs:
       uses: terraform-docs/gh-actions@v0.11.0
       with:
         working-dir: modules,stacks
-        config-file: .terraform-docs.yml
+        config-file: .terraform-docs.yaml
         output-file: Readme.md
         output-method: replace
         git-push: "true"
